bin_PROGRAMS = two_sum removeDuplicate sort findLength singleNumber select \
			   fe p002

two_sum_SOURCES = src/sum.c
removeDuplicate_SOURCES = src/removeDuplicate.c
sort_SOURCES = src/sort.c
findLength_SOURCES = src/findLength.c
singleNumber_SOURCES = src/singleNumber.c
select_SOURCES = src/selectionSort.c
fe_SOURCES = src/findElement.c
p002_SOURCES = src/p002.c

INCLUDES = -I $(top_srcdir)/src
CFLAGS = -g -O2 -Wall

EXTRA_DIST = autogen.sh \
             README.md
