bin_PROGRAMS = two_sum removeDuplicate sort findLength singleNumber select \
			   fe p002 p067 p067_v1 p415 p46 p50 p007 p038

two_sum_SOURCES = src/sum.c
removeDuplicate_SOURCES = src/removeDuplicate.c
sort_SOURCES = src/sort.c
findLength_SOURCES = src/findLength.c
singleNumber_SOURCES = src/singleNumber.c
select_SOURCES = src/selectionSort.c
fe_SOURCES = src/findElement.c
p002_SOURCES = src/list.h src/list.c src/p002.c
p067_SOURCES = src/list.h src/list.c src/p067.c
p067_v1_SOURCES = src/p067_v1.c
p415_SOURCES = src/p415.c
p46_SOURCES = src/p46.c
p50_SOURCES = src/p50.c
p007_SOURCES = src/p007.c
p038_SOURCES = src/p038.c

INCLUDES = -I $(top_srcdir)/src
CFLAGS = -g -O2 -Wall

EXTRA_DIST = autogen.sh \
             README.md
