bin_PROGRAMS = two_sum p001 removeDuplicate sort findLength singleNumber select \
			   fe p002 p067 p067_v1 p415 p046 p050 p007 p038 p038_v1 p038_v2 p443 \
			   p009 p008 p028 p028_v1 p231 p459 p011 p011_v1 p003 p003_v1

two_sum_SOURCES = src/sum.c
p001_SOURCES = src/uthash.h src/p001.c
removeDuplicate_SOURCES = src/removeDuplicate.c
sort_SOURCES = src/sort.c
findLength_SOURCES = src/findLength.c
singleNumber_SOURCES = src/singleNumber.c
select_SOURCES = src/selectionSort.c
fe_SOURCES = src/findElement.c
p002_SOURCES = src/list.h src/list.c src/p002.c
p067_SOURCES = src/list.h src/list.c src/p067.c
p067_v1_SOURCES = src/p067_v1.c
p415_SOURCES = src/p415.c
p046_SOURCES = src/p046.c
p050_SOURCES = src/p050.c
p007_SOURCES = src/p007.c
p038_SOURCES = src/p038.c
p038_v1_SOURCES = src/p038_v1.c
p038_v2_SOURCES = src/p038_v2.c
p443_SOURCES = src/p443.c
p009_SOURCES = src/p009.c
p008_SOURCES = src/p008.c
p028_SOURCES = src/p028.c
p028_v1_SOURCES = src/p028_v1.c
p231_SOURCES = src/p231.c
p459_SOURCES = src/p459.c
p011_SOURCES = src/p011.c
p011_v1_SOURCES = src/p011_v1.c
p003_SOURCES = src/p003.c
p003_v1_SOURCES = src/p003_v1.c

INCLUDES = -I $(top_srcdir)/src
CFLAGS = -g -O2 -Wall

EXTRA_DIST = autogen.sh \
             README.md
